<resources>
    <string name="app_name">GenericApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="pass">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
</resources>
